--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap");
 
 /* layout */
 :root {
@@ -25,7 +25,7 @@ header a {
   color: #333;
   text-decoration: none;
 }
-.pages{
+.pages {
   max-width: 1400px;
   padding: 20px;
   margin: 0 auto;
@@ -37,25 +37,26 @@ header a {
   grid-template-columns: 3fr 1fr;
   gap: 100px;
 }
-.workout-details {
+.blog-details {
   background: #fff;
   border-radius: 4px;
   margin: 20px auto;
   padding: 20px;
   position: relative;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
+  word-break: break-all;
 }
-.workout-details h4 {
+.blog-details h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
   color: var(--primary);
 }
-.workout-details p {
+.blog-details p {
   margin: 0;
   font-size: 0.9em;
   color: #555;
 }
-.workout-details span {
+.blog-details span {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -66,11 +67,13 @@ header a {
   color: #333;
 }
 
-/* new workout form */
-label, input {
+/* new blog form */
+label,
+input {
   display: block;
 }
-input {
+input,
+textarea {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
@@ -79,6 +82,11 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+textarea {
+  min-height: 400px;
+}
+
 form button {
   background: var(--primary);
   border: 0;
@@ -105,7 +113,8 @@ nav {
   display: flex;
   align-items: center;
 }
-nav a, nav button {
+nav a,
+nav button {
   margin-left: 10px;
 }
 nav button {
@@ -120,10 +129,15 @@ nav button {
 }
 
 /* auth forms */
-form.signup, form.login {
+form.signup,
+form.login {
   max-width: 400px;
   margin: 40px auto;
   padding: 20px;
   background: #fff;
   border-radius: 4px;
+}
+
+.textDetails {
+  padding-bottom: 1rem;
 }
