--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 :root {
   --primary: #1aac83;
   --error: #e7195a;
+  --normal: rgb(243, 201, 17);
 }
 body {
   background: #f1f1f1;
@@ -11,7 +12,7 @@ body {
   font-family: "Poppins";
 }
 header {
-  background: #fff;
+  background: var(--normal);
 }
 header .container {
   max-width: 1400px;
@@ -45,6 +46,7 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
   word-break: break-all;
+ 
 }
 .blog-details h4 {
   margin: 0 0 10px 0;
@@ -140,4 +142,16 @@ form.login {
 
 .textDetails {
   padding-bottom: 1rem;
+}
+
+.textImage{
+  width: 10%;
+ 
+  
+}
+
+#kilobyte{
+  font-size: 0.8rem;
+  padding: 0;
+  margin: 0;
 }
