--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,10 +4,11 @@
 :root {
   --primary: #1aac83;
   --error: #e7195a;
-  --normal: rgb(243, 201, 17);
+  --normal: #b8dbd9;
 }
+
 body {
-  background: #f1f1f1;
+  background: #f4f4f9;
   margin: 0;
   font-family: "Poppins";
 }
@@ -46,7 +47,6 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
   word-break: break-all;
- 
 }
 .blog-details h4 {
   margin: 0 0 10px 0;
@@ -67,6 +67,11 @@ header a {
   padding: 6px;
   border-radius: 50%;
   color: #333;
+}
+
+.blog-details span:hover {
+  background-color: var(--error);
+  color: white;
 }
 
 /* new blog form */
@@ -97,6 +102,11 @@ form button {
   font-family: "Poppins";
   border-radius: 4px;
   cursor: pointer;
+}
+form button:hover {
+  background-color: #f4f4f9;
+  color: black;
+  border: 1px solid var(--primary);
 }
 div.error {
   padding: 10px;
@@ -129,6 +139,10 @@ nav button {
   cursor: pointer;
   font-size: 1em;
 }
+nav button:hover {
+  background-color: var(--error);
+  color: white;
+}
 
 /* auth forms */
 form.signup,
@@ -144,14 +158,17 @@ form.login {
   padding-bottom: 1rem;
 }
 
-.textImage{
+.textImage {
   width: 10%;
- 
-  
 }
 
-#kilobyte{
+#kilobyte {
   font-size: 0.8rem;
   padding: 0;
   margin: 0;
+}
+
+#italic {
+  font-style: italic;
+  font-size: 0.8rem;
 }
